5 October 2022: Wouter
	- Fix dnscrypt compile for proxy protocol code changes.

5 October 2022: George
	- Use DEBUG_TDIR from environment in mini_tdir.sh for debugging.
	- Fix string comparison in mini_tdir.sh.
	- Make ede.tdir test more predictable by using static data.
	- Fix checkconf test for dnscrypt and proxy port.

4 October 2022: George
	- Merge #764: Leniency for target discovery when under load (for
	  NRDelegation changes).

4 October 2022: Wouter
	- Fix static analysis report to remove dead code from the
	  rpz_callback_from_iterator_module function.
	- Fix to clean up after the acl_interface unit test.

3 October 2022: George
	- Merge #760: PROXYv2 downstream support. (New proxy-protocol-port
	  configuration option).

3 October 2022: Wouter
	- Fix to remove erroneous TC flag from TCP upstream.
	- Fix test tdir skip report printout.
	- Fix windows compile, the identifier interface is defined in headers.
	- Fix to close errno block in comm_point_tcp_handle_read outside of
	  ifdef.

26 September 2022: George
	- Better output for skipped tdir tests.

21 September 2022: Wouter
	- Patch for CVE-2022-3204 Non-Responsive Delegation Attack.
	- This patch was released in 1.16.3, the code repository continues
	  with the previous features and fixes for 1.17.0.
	- Fix doxygen warning in respip.h.

20 September 2022: George
	- Convert tdir tests to use the new skip_test functionality.
	- Remove unused testcode/mini_tpkg.sh file.

16 September 2022: George
	- Merge #753: ACL per interface. (New interface-* configuration
	  options).

2 September 2022: Wouter
	- Remove include that was there for debug purposes.
	- Fix to check pthread_t size after pthread has been detected.

1 September 2022: Wouter
	- Fix to update config tests to fix checking if nonblocking sockets
	  work on OpenBSD.
	- Slow down log frequency of write wait failures.
	- Fix to set out of file descriptor warning to operational verbosity.